# scourt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scourt-news-bot.yml  scourt-weekly-health.yml
src/scourt_bot/: __init__.py  article_writer.py  config.py  main.py  models.py  pdf_service.py  pipeline.py  scourt_client.py  storage.py  teams.py  weekly_health.py
